responsive home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="">Contact</a></li>
         </ul>
       </div>
-      <div class="logo">
+      <div class="logo t">
         <p>SA</p>
       </div>
     </div>
@@ -44,7 +44,7 @@
 
             <div class="home-right">
                 <div class="home-image">
-                    <img src="WhatsApp_Image_2022-06-13_at_9.39.45_PM-removebg-preview.png" alt="">
+                   <center><img src="WhatsApp_Image_2022-06-13_at_9.39.45_PM-removebg-preview.png" alt=""></center>
                 </div>
             </div>
         </div>
