responsive about page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href=""><i class="fa fa-bars" aria-hidden="true"></i></a>
       </div>
     </div>
-    <!-- home page -->
+    <!-- home pages -->
     <div class="container" id="home">
       <div class="home-page">
         <div class="home-left">
