--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="logo t">
@@ -46,9 +46,11 @@
         <div class="home-left">
           <div class="home-heading">
             <p class="p1">Hi I'm</p>
-            <p class="p2">Sonu Alex</p>
+            <p class="p2">S<span>o</span>nu Alex</p>
             <p class="p3">A GRAPHIC DESIGNER</p>
-            <p class="p4">who belives creativity is solving problems</p>
+            <p class="p4">
+              who belives <span>creativity</span> is solving problems
+            </p>
           </div>
         </div>
 
@@ -56,7 +58,7 @@
           <div class="home-image">
             <center>
               <img
-                src="WhatsApp_Image_2022-06-13_at_9.39.45_PM-removebg-preview.png"
+                src="WhatsApp Image 2022-06-14 at 4.30.00 PM.jpeg"
                 alt=""
               />
             </center>
@@ -67,7 +69,7 @@
     <!-- about section -->
     <div class="about" id="about">
       <div class="about-heading">
-        <h1>About Me</h1>
+        <h2>About Me</h2>
       </div>
       <div class="container">
         <div class="about-details">
@@ -77,7 +79,8 @@
               background="transparent"
               speed="1"
               class="lottie"
-              autoplay loop
+              autoplay
+              loop
             ></lottie-player>
           </div>
 
@@ -89,19 +92,50 @@
               laudantium asperiores, iusto fugiat. Dolores qui tempore optio
               obcaecati, fugiat ipsam nihil ducimus quis accusantium atque
               impedit ratione, modi, veniam delectus doloribus ex ab iure quidem
-              Laborum, porro? Qui,
-              ratione eius. Eos iste error sit quis quia vel, sunt libero vero
-              dolorum aperiam nostrum veritatis nam. Corrupti repudiandae
-              doloremque neque, quas assumenda consectetur iusto in!
-            </p><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing. <span> -Kathija</span></p>
+              Laborum, porro? Qui, ratione eius. Eos iste error sit quis quia
+              vel, sunt libero vero dolorum aperiam nostrum veritatis nam.
+              Corrupti repudiandae doloremque neque, quas assumenda consectetur
+              iusto in!
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing.
+              <span> -Kathija</span>
+            </p>
           </div>
         </div>
       </div>
     </div>
     <!-- services -->
+    <div class="services" id="services">
+      <div class="services-heading">
+        <h2>Services</h2>
+      </div>
+
+      <div class="cards">
+        <div class="card">
+          <p>Service 1</p>
+          <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+          <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_gqi90xdb.json"  background="transparent"  speed="1"  style="width: 180px; height: 180px;"  loop autoplay></lottie-player>
+          <p class="p1">Lorem ipsum, dolor sit amet consectetur molestias a? Excepturi, reiciendis perferendis!</p>
+        </div>
+        <div class="card">
+          <p>Service 2</p>
+          <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, excepturi Lorem ipsum dolor sit amet conepellat, molestias a? Excepturi, reiciendis perferendis!</p>
+          <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_pkibk91l.json"  background="transparent"  speed="1"  style="width: 180px; height: 180px;"  loop autoplay></lottie-player>
+        </div>
+        <div class="card">
+          <p>Service 3</p>
+          <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets9.lottiefiles.com/private_files/lf30_nfa4vjrl.json"  background="transparent"  speed="1"  style="width: 160px; height: 160px;"  loop autoplay></lottie-player>
+          <p class="p1">Lorem ipsum, dolor sit amet consecteturi Lorem ipsum dolor sit amet conepellat, molestias a? Excepturi, reiciendis perferendis!</p>
+        </div>
+      </div>
+    </div>
     <!-- Projects -->
     <!-- Contact -->
+  
 
     <script src="script.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
