--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="home-image">
             <center>
               <img
-                src="WhatsApp Image 2022-06-14 at 4.30.00 PM.jpeg"
+                src="WhatsApp_Image_2022-06-13_at_9.39.45_PM-removebg-preview.png"
                 alt=""
               />
             </center>
