--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
       <div class="logo t">
         <p>SA</p>
       </div>
-      <div class="handburger">
-        <a href=""><i class="fa fa-bars" aria-hidden="true"></i></a>
+      <div class="hamburger">
+        <div class="bars"></div>
+        <div class="bars"></div>
+        <div class="bars"></div>
       </div>
     </div>
     <!-- home pages -->
